// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense summary component correctly with multiple expenses 1`] = `
<div>
  Viewing 
  23
   
  expenses
   totalling 
  $1,234,567.89
</div>
`;

exports[`should render expense summary component correctly with no expenses 1`] = `
<div>
  Viewing 
  0
   
  expenses
   totalling 
  $0.00
</div>
`;
